fix z-index

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -45,8 +45,13 @@ table.tacky thead th::before,
 table.tacky tbody td::before,
 table.tacky tbody th::before {
     @apply ring-1 ring-inset ring-slate-700;
-    @apply absolute top-0 left-0 w-full h-full;
+    @apply absolute top-0 left-0 w-full h-full z-0;
     content: "";
+}
+
+table.tacky th *,
+table.tacky td *{
+    @apply relative z-10;
 }
 
 
